<resources>
    <string name="app_name">Northumberland Go!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">822946264715438</string>
    <string name="fb_login_protocol_scheme">fb822946264715438</string>
    <string name="facebook_application_id" translatable="false">822946264715438</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb822946264715438</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="pref_loc">user_preferences</string>
    <string name="pref_user">login_username</string>
    <string name="pref_login">login_type</string>
    <string name="login_manual">manual</string>
    <string name="login_facebook">facebook</string>
    <string name="login_google">google</string>
    <string name="pref_dark">theme_mode</string>
    <string name="pref_dis">disability_mode</string>
    <string name="pref_travel">travel_mode</string>
    <string name="recents">recent_places</string>
    <string name="default_date">dd-MM-yyyy</string>
    <string name="main_quote">
        <b>Welcome To The North!</b>
        \nAre you ready to discover what all the buzz is about?
    </string>
    <string name="start_button">"Let's explore!"</string>
    <string name="home">"Home"</string>
    <string name="camera_overlay">"Enable the camera to access further features"</string>
    <string name="location_nearby">"Location Nearby!"</string>
    <string name="cancel_route">"Cancel Route"</string>
    <string name="nearby">"Nearby"</string>
    <string name="results">"Results"</string>
    <string name="clear">"Clear"</string>
    <string name="distance_unit">" km away"</string>
    <string name="get_directions">"Get Directions"</string>
    <string name="get_started">"Get Started!"</string>
    <string name="snap">"Snap!"</string>
    <string name="nav_tut_1">"To see the map"</string>
    <string name="nav_tut_2">"Recently visited place"</string>
    <string name="nav_tut_3">"List of your achievements"</string>
    <string name="nav_tut_4">"Personalise this app"</string>
    <string name="nav_tut_5">"FAQ page"</string>
    <string name="cam_help">"Camera Help"</string>
    <string name="recent_places">"Recent Places"</string>
    <string name="achievement">"Achievement"</string>
    <string name="council_signature">"Northumberland Council"</string>
    <string name="achievement_help">"Achievement Help"</string>
    <string name="achievement_locked">"Achievement Locked"</string>
    <string name="settings">"Settings"</string>
    <string name="visual_settings">"Visual Settings"</string>
    <string name="dark_mode">"Enable Dark Mode"</string>
    <string name="device_settings">"Device Settings:"</string>
    <string name="enable_location">"Enable Location"</string>
    <string name="enable_camera">"Enable Camera"</string>
    <string name="map_settings">"Map Settings"</string>
    <string name="disability_access">"Disability Access Required"</string>
    <string name="default_transport">"Default Mode of Transport:"</string>
    <string name="walking">"Walking"</string>
    <string name="public_transport">"Public Transport"</string>
    <string name="car">"Car"</string>
    <string name="logout">"Logout"</string>
    <string name="settings_enabled">"You have already enabled this setting"</string>
    <string name="settings_help">"Settings Help"</string>
    <string name="help">"Help"</string>
    <string name="tutorial">"Tutorial"</string>
    <string name="more">"More"</string>
    <string name="map_tutorial">
        <b>You can search for locations using the search bar:</b>

        \n- You can use <b>#all</b> to show all locations
        \n- You could type <b>#castle</b> to show all castles
        \n- You can find a list of hashtags in the Help Section
        \n- Press <b>more</b> on a location to view information about it
        \n- Press <b>get directions</b> to get a route to the location
        \n- Then press the arrow on the right to view readable directions
        \n
        \nIf you click <b>nearby</b>, you will be shown the top 3 closest attraction to you
        \n

        \nPress the top right target-like button to centre the map on your location
        \n
        \nPress the top left button or swipe from the left to view the Navbar
        \n
        \n<b>You can press the question mark(?) to see help for this section at any time</b>
    </string>
    <string name="cam_tutorial">
        \nIn order to complete your trip and possibly <b>unlock</b> an achievement, make sure your phone is first <b>tilted upright</b>.
        \n
        \nThen press the <b>\'Snap\'</b>, button.
        \n
        \nIf you are eligible for an achievement then you will be given an alert telling you new achievements have been unlocked.
    </string>
    <string name="recent_places_tutorial">
        Here you can see all the locations you have visited/calculated routes for during this session of Northumberland GO!
        \n
        \nPress on the locations from here to view more information about them.
        \n
        \nThis list of recent places will always be saved, so long as you are signed in.
    </string>
    <string name="achievement_tutorial">
        The Achievements page allows you to see all the achievements in the app.
        \n
        \nIf the achievement logo is in colour, you have unlocked this achievement.
        \nIf it is greyed out, then you still need to unlock it.
        \n
        \nPressing on an achievement will show you its achievement card\n
        \n
        If you have unlocked the achievement you can share its certificate on Facebook or a link to the certificate using any app you desire.
    </string>
    <string name="settings_tutorial">
        On this page you can personalise the app.
        \n
        \n-Enabling dark mode will change the entire apps colour scheme, including the maps.
        \n-If not already enabled, you can enable your location and camera.
        \n-If you require disabled access you can restrict locations here.
        \n-You can also set the default mode of transport used to calculate routes.
        \n
        \nThis is the only place you can <b>log out</b> of your account.
    </string>
    <string name="help_tutorial">
        Here is a list of frequently asked questions and their answers.
        \n
        \nThis page may give you more information about the app, however for any other questions of information, view our user guide on our website…
        \n
        \n<b>http://homepages.cs.ncl.ac.uk/2018-19/CSC2022/Team12/website/</b>
    </string>
    <string name="faq_q1">I am not sure what to do with the app, what do I do?</string>
    <string name="faq_a1">Press the &lt;b&gt;(?)&lt;/b&gt; button, found in the top right of every window of the app</string>
    <string name="faq_q2">What happens if I am outside of Northumberland, can I still use the app ?</string>
    <string name="faq_a2">Yes, you can but all the destinations in the app are in Northumberland.</string>
    <string name="faq_q3">How do I find the closest destination near me?</string>
    <string name="faq_a3">Go to the homepage, press the &lt;b&gt;Nearby&lt;/b&gt; bar at the bottom of the screen. This will show the top 3 closest locations to you.</string>
    <string name="faq_q4">How do I log out?</string>
    <string name="faq_a4">Go to the &lt;b&gt;Settings&lt;/b&gt; option in the side navigation bar. On the bottom of the menu there will be a \'logout\' button.</string>
    <string name="faq_q5">Do I require internet access to use the app?</string>
    <string name="faq_a5">To use the app you need to have mobile data and location services enabled.</string>
    <string name="faq_q6">I have arrived at the destination but the &lt;b&gt;Location Nearby&lt;/b&gt; button has not shown up, what do I do?</string>
    <string name="faq_a6">Usually problems like this will be fixed if you restart the app. Also make sure that you have a stable internet connection and location services are still enabled.</string>
    <string name="faq_q7">How do I search for a location by its category?</string>
    <string name="faq_a7">The app will only recognise a search for categories if a &lt;b&gt;\'#\'&lt;/b&gt; symbol precedes the search term. E.g. &lt;b&gt;#garden&lt;/b&gt; will show all gardens.</string>
    <string name="faq_q8">How do I get directions to a location?</string>
    <string name="faq_a8">To display a route to a location on the map, in either the &lt;b&gt;Near Me&lt;/b&gt; section or the &lt;b&gt;Results&lt;/b&gt; section after a search, tap the &lt;b&gt;More&lt;/b&gt; button next to the location. On the new location page, tap the &lt;b&gt;Get Directions&lt;/b&gt; button and a route should display on your map. &lt;i&gt;Note that from here you can drag a panel from the right with more detailed directions.</string>
    <string name="faq_q9">The attraction I’m looking for isn’t showing up in the results?</string>
    <string name="faq_a9">If you are sure you have made no spelling errors in your search terms, type &lt;b&gt;#all&lt;/b&gt; into the search bar and check the results shown. &lt;b&gt;#all&lt;/b&gt; will display all the locations in our app. We apologise if your attraction is still not showing as this means it is not yet in our database.</string>
    <string name="faq_q10">Will the app make posts on my Facebook/Google?</string>
    <string name="faq_a10">The app will not make any posts to your social media without your knowledge or permission. Social media posts will only be made if you decide to share an achievement from the achievement page.</string>
    <string name="faq_q11">How can I share my progress with friends?</string>
    <string name="faq_a11">When you unlock achievements, a Facebook logo will appear next to the now colourful logo. You can press this to share the achievement logo directly to Facebook. You can also press the share symbol next to this button to share a certificate of your achievement as a link, using any messaging platform you desire.</string>
    <string name="faq_q12">The app is too bright, is there a dark mode?</string>
    <string name="faq_a12">Go to the &lt;b&gt;Settings&lt;/b&gt; page, turn the switch next to &lt;b&gt;Enable Dark mode&lt;/b&gt; on and the app theme will change immediately.</string>
    <string name="faq_q13">Where can I leave feedback and suggestions?</string>
    <string name="faq_a13">Any feedback or suggestions are welcome. Contact us information can be found on our website at&lt;br/&gt;http://homepages.cs.ncl.ac.uk/2018-19/CSC2022/Team12/website/</string>
    <string name="faq_q14">I no longer want to travel to the attraction I have selected, how do I cancel my route?</string>
    <string name="faq_a14">Press on the arrow on the right hand side of the map screen to bring up the readable directions. At the top of the directions is a &lt;b&gt;Cancel Route&lt;/b&gt; button. Press this and the route will disappear.</string>
    <string name="faq_q15">I can only visit attractions with disabled access, is there any help for me?</string>
    <string name="faq_a15">Go to the &lt;b&gt;Settings&lt;/b&gt; page, turn the switch next to &lt;b&gt;Disability Access Required&lt;/b&gt; on and then only locations that have disabled access will appear on the map/will be searchable.</string>
    <string name="faq_q16">How do I unlock achievements?</string>
    <string name="faq_a16">For location specific achievements, you must travel to the location linked to that achievement. Once you are close the location, press the &lt;b&gt;Location Nearby&lt;/b&gt; button, aim your camera at the location and press &lt;b&gt;Snap&lt;/b&gt;. This will unlock the achievement. For other achievements, follow the instructions in the achievement description.</string>
</resources>