<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/theme_light_background"
    android:fillViewport="true"
    android:id="@+id/fragment_settings"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_settings_title"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/colorLightAccent"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/fragment_settings_visual"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_settings_visual_title"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:text="@string/visual_settings"
                android:textAlignment="center"
                android:textColor="@color/colorLightAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:gravity="center"
                android:id="@+id/fragment_settings_visual_switch"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/dark_mode"
                android:textColor="@color/colorLightAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:thumbTint="@color/colorLightSecondary"
                android:trackTint="@color/colorLightAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_device"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="125dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_settings_device_title"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:text="@string/device_settings"
                android:textAlignment="center"
                android:textColor="@color/colorLightAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:background="@drawable/theme_light_button_round"
                android:gravity="center"
                android:id="@+id/fragment_settings_device_location"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="200dp"
                android:text="@string/enable_location"
                android:textColor="@color/colorLightSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:background="@drawable/theme_light_button_round"
                android:id="@+id/fragment_settings_device_camera"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/enable_camera"
                android:textColor="@color/colorLightSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_transport"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_settings_transport_title"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:text="@string/map_settings"
                android:textAlignment="center"
                android:textColor="@color/colorLightAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:gravity="center"
                android:id="@+id/fragment_settings_transport_disability"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/disability_access"
                android:textColor="@color/colorLightAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:thumbTint="@color/colorLightSecondary"
                android:trackTint="@color/colorLightAccent" />

            <TextView
                android:id="@+id/fragment_settings_transport_subtitle"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:text="@string/default_transport"
                android:textAlignment="center"
                android:textColor="@color/colorLightAccent"
                android:textSize="16dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/fragment_settings_transport_radio"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <RadioButton
                    android:buttonTint="@color/colorLightSecondary"
                    android:checked="true"
                    android:gravity="center"
                    android:id="@+id/fragment_settings_transport_radio_walk"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_width="200dp"
                    android:text="@string/walking"
                    android:textColor="@color/colorLightAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:buttonTint="@color/colorLightSecondary"
                    android:gravity="center"
                    android:id="@+id/fragment_settings_transport_radio_public"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_width="200dp"
                    android:text="@string/public_transport"
                    android:textColor="@color/colorLightAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:buttonTint="@color/colorLightSecondary"
                    android:gravity="center"
                    android:id="@+id/fragment_settings_transport_radio_car"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_width="200dp"
                    android:text="@string/car"
                    android:textColor="@color/colorLightAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_settings_logout"
            android:layout_height="wrap_content"
            android:layout_marginTop="530dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_settings_logout_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You are signed in as:"
                android:textColor="@color/colorLightAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_settings_logout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                android:textColor="@color/colorLightAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp">
                <Button
                    android:background="@drawable/theme_light_button_square"
                    android:id="@+id/fragment_settings_logout_button"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_width="200dp"
                    android:text="@string/logout"
                    android:textColor="@color/colorLightSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:title="@string/logout"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:background="@drawable/theme_light_button_round"
            android:gravity="center"
            android:id="@+id/fragment_settings_enabled"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:padding="5dp"
            android:text="@string/settings_enabled"
            android:textColor="@color/colorLightSecondary"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/fragment_settings_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:visibility="gone" />

        <!-- Tutorial overlay -->
        <LinearLayout
            android:id="@+id/fragment_settings_tutorial"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/theme_dark_button_square_v2"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/fragment_settings_tutorial_close"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/fragment_settings_tutorial_close_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:drawable/ic_menu_close_clear_cancel"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_settings_tutorial_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_settings_tutorial_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/settings_help"
                    android:paddingBottom="5dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/fragment_settings_tutorial_content_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp"
                    android:text="@string/settings_tutorial"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>